test (Procedure): 피부 고민 응답 반영 테스트 수정 및 가독성 향상을 위한 리팩토링