@@ -16,10 +16,12 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import com.sopt.cherrish.domain.procedure.domain.model.Procedure;
+import com.sopt.cherrish.domain.procedure.domain.model.ProcedureWorry;
 import com.sopt.cherrish.domain.procedure.domain.repository.ProcedureRepository;
 import com.sopt.cherrish.domain.procedure.domain.repository.ProcedureWorryRepository;
 import com.sopt.cherrish.domain.procedure.fixture.ProcedureFixture;
 import com.sopt.cherrish.domain.procedure.presentation.dto.response.ProcedureListResponseDto;
+import com.sopt.cherrish.domain.worry.domain.model.Worry;
 
 @ExtendWith(MockitoExtension.class)
 @DisplayName("ProcedureService 단위 테스트")
@@ -43,7 +45,11 @@ class ProcedureServiceTest {
 
         List<Procedure> procedures = Arrays.asList(procedure1, procedure2);
 		given(procedureRepository.searchProcedures(null, null)).willReturn(procedures);
-		given(procedureWorryRepository.findAllByProcedureIdInWithWorry(any())).willReturn(Collections.emptyList());
+		given(procedureWorryRepository.findAllByProcedureIdInWithWorry(any()))
+			.willReturn(List.of(
+				procedureWorry(procedure1, "탄력/주름"),
+				procedureWorry(procedure2, "여드름/트러블")
+			));
 
 		// when
 		ProcedureListResponseDto result = procedureService.searchProcedures(null, null);
@@ -63,7 +69,8 @@ class ProcedureServiceTest {
 		Procedure procedure = ProcedureFixture.createProcedure("레이저 토닝", "레이저", 0, 1);
 
 		given(procedureRepository.searchProcedures(keyword, null)).willReturn(Collections.singletonList(procedure));
-		given(procedureWorryRepository.findAllByProcedureIdInWithWorry(any())).willReturn(Collections.emptyList());
+		given(procedureWorryRepository.findAllByProcedureIdInWithWorry(any()))
+			.willReturn(List.of(procedureWorry(procedure, "여드름/트러블")));
 
 		// when
 		ProcedureListResponseDto result = procedureService.searchProcedures(keyword, null);
@@ -71,7 +78,7 @@ class ProcedureServiceTest {
 		// then
 		assertThat(result.getProcedures()).hasSize(1);
 		assertThat(result.getProcedures().get(0).getName()).isEqualTo("레이저 토닝");
-		assertThat(result.getProcedures().get(0).getWorries()).isEmpty();
+		assertThat(result.getProcedures().get(0).getWorries()).hasSize(1);
 	}
 
 	@Test
@@ -82,7 +89,8 @@ class ProcedureServiceTest {
 		Procedure procedure = ProcedureFixture.createProcedure("레이저 토닝", "레이저", 0, 1);
 
 		given(procedureRepository.searchProcedures(null, worryId)).willReturn(Collections.singletonList(procedure));
-		given(procedureWorryRepository.findAllByProcedureIdInWithWorry(any())).willReturn(Collections.emptyList());
+		given(procedureWorryRepository.findAllByProcedureIdInWithWorry(any()))
+			.willReturn(List.of(procedureWorry(procedure, "여드름/트러블")));
 
 		// when
 		ProcedureListResponseDto result = procedureService.searchProcedures(null, worryId);
@@ -102,7 +110,8 @@ class ProcedureServiceTest {
 
         given(procedureRepository.searchProcedures(keyword, worryId))
                 .willReturn(Collections.singletonList(procedure));
-		given(procedureWorryRepository.findAllByProcedureIdInWithWorry(any())).willReturn(Collections.emptyList());
+		given(procedureWorryRepository.findAllByProcedureIdInWithWorry(any()))
+			.willReturn(List.of(procedureWorry(procedure, "여드름/트러블")));
 
         // when
         ProcedureListResponseDto result = procedureService.searchProcedures(keyword, worryId);
@@ -110,7 +119,7 @@ class ProcedureServiceTest {
         // then
         assertThat(result.getProcedures()).hasSize(1);
         assertThat(result.getProcedures().get(0).getName()).isEqualTo("레이저 토닝");
-        assertThat(result.getProcedures().get(0).getWorries()).isEmpty();
+        assertThat(result.getProcedures().get(0).getWorries()).hasSize(1);
     }
 
     @Test
@@ -150,7 +159,8 @@ class ProcedureServiceTest {
 
 		given(procedureRepository.searchProcedures(null, null))
 			.willReturn(Collections.singletonList(procedure));
-		given(procedureWorryRepository.findAllByProcedureIdInWithWorry(any())).willReturn(Collections.emptyList());
+		given(procedureWorryRepository.findAllByProcedureIdInWithWorry(any()))
+			.willReturn(List.of(procedureWorry(procedure, "탄력/주름")));
 
 		// when
 		ProcedureListResponseDto result = procedureService.searchProcedures(null, null);
@@ -159,8 +169,18 @@ class ProcedureServiceTest {
 		assertThat(result.getProcedures()).hasSize(1);
 		assertThat(result.getProcedures().get(0).getId()).isNotNull();
 		assertThat(result.getProcedures().get(0).getName()).isEqualTo("프락셀 레이저");
-		assertThat(result.getProcedures().get(0).getWorries()).isEmpty();
+		assertThat(result.getProcedures().get(0).getWorries()).hasSize(1);
 		assertThat(result.getProcedures().get(0).getMinDowntimeDays()).isEqualTo(3);
 		assertThat(result.getProcedures().get(0).getMaxDowntimeDays()).isEqualTo(7);
+	}
+
+	private ProcedureWorry procedureWorry(Procedure procedure, String worryContent) {
+		Worry worry = Worry.builder()
+			.content(worryContent)
+			.build();
+		return ProcedureWorry.builder()
+			.procedure(procedure)
+			.worry(worry)
+			.build();
 	}
 }
